로또 3단계 구현 (#3734)
* DOCS : write the function of StringCalculator in README.md

* FEAT : create StringCalculator

* TEST : create StringCalculatorTest

* TEST : create text fixtures to apply StringCalculatorTest

* FEAT : create enum file Operator to manage operator and operation

* REFACTOR : remove static field and apply Operator(enum)

* TEST : change method in add, substract, multiply, divide test to apply enum

* TEST : add two exception test

* REFACTOR : check the element count and expression order

* DOCS : write function list of java-lotto in README.md

* FEAT : create InputView to input money and win numbers

* create ResultView to print lotto list and statistics and revenue

* FEAT : create RandomUtil to extract random value

* FEAT : create Purchase to calculate purchase count

* FEAT : create WinNumber to make win number list that user input

* FEAT : create Lotto to manage lotto number list

* FEAT : create Statistics to check agreement between win number and lotto number and calculate revenue

* FEAT : create LottoController

* TEST : create Lotto Test

* TEST : create PurchaseTest.java

* TEST : create test about Statistics, WinNumber, RandomUtil

* DOCS : 로또 기능 구현 목록 작성

* FEAT : create InputView to input money and winning numbers

* FEAT : create ResultView to print purchasing count, lotto list and winning result

* FEAT : create LottoShop to purchase lotto and create lottos

* FEAT : LottoGenerator 생성 - 셔플된 로또 리스트 생성, Lotto와 Lottos 생성

* FEAT : Lotto 생성

* FEAT : Lottos 생성

* FEAT : LottoNumber 생성

* FEAT : LottoNumbers 생성 - 1부터 45까지의 로또 리스트

* FEAT : Number 생성 - 로또 번호의 number 포장

* FEAT : LottoMatch 생성 - 로또 번호와 당첨 번호 일치 현황

* FEAT : LottoMatchCount 생성 - 로또 번호 리스트 하나와 당첨 번호 간 일치 수

* FEAT : Winning 생성 - 입력한 당첨번호(String)를 Number형 리스트로 변환

* FEAT : Prize 생성 - 로또 번호와 당천 번호 간 일치 수에 따른 상금

* FEAT : Revenue 생성 - 수익률 계산

* CHORE : 로또 실행에 필요한 상수 정의

* FEAT : 로또 컨트롤러 생성

* CHORE : 